maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:101: error: type mismatch;
 found   : Int
 required: Boolean
      (!aMurOuest(x+1, y) && getIndication(x+1, y)) match {
                                          ^